k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digikool-gateway
  namespace: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: digikool-gateway
  template:
    metadata:
      labels:
        app: digikool-gateway
    spec:
      containers:
        - name: gateway
          image: 767397664515.dkr.ecr.ap-south-1.amazonaws.com/digikool-gateway:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 6061
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 6061
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 6061
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
