k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digikool-gateway-ingress
  namespace: gateway
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:767397664515:certificate/1bd6d41b-c7be-4cba-8604-c8f8a60a0b68
spec:
  ingressClassName: alb
  rules:
    - host: api.digikool.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: digikool-gateway-svc
                port:
                  number: 80
